--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"mongodb": "^6.3.0"
+	}
 }
