--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "type": "module",
   "dependencies": {
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "ts-fsrs": "^3.5.7"
   }
 }
